changed copyright notice, version 0.24.7

--- a/litestep/litestep.rc
+++ b/litestep/litestep.rc
@@ -29,7 +29,7 @@ LANGUAGE LANG_CHINESE, SUBLANG_CHINESE_TRADITIONAL
 STRINGTABLE DISCARDABLE 
 BEGIN
     IDS_LITESTEP_ERROR1     "±z¤w¸g¦b°õ¦æ LiteStep ¡A\n½T©w­nÄ~Äò¶Ü¡H"
-    IDS_LITESTEP_ERROR2     "§ä¤£¨ìÀÉ®× \\""%s\\""¡C\n½Ð½T»{ÀÉ®×¸ô®|¬O§_¥¿½T«á¦A¬O¤@¦¸¡C"
+    IDS_LITESTEP_ERROR2     "§ä¤£¨ìÀÉ®× ""%s""¡C\n½Ð½T»{ÀÉ®×¸ô®|¬O§_¥¿½T«á¦A¬O¤@¦¸¡C"
     IDS_LITESTEP_ERROR3     "±z²{¦b¥¿¦b¨Ï¥Î¥t¤@­Ó Shell¡CLiteStep b24 ÁöµM¥i¥H¸ò Exploere ¤@°_°õ¦æ¡A\n¦ý¬O§Ú­Ì¨Ã¤£«ØÄ³·s¨Ï¥ÎªÌ¨Ï¥Î³o¼Ëªº³]©w¡A¦Ó¥B§Ú­Ì¤]¤£¤ä´©³o¼Ëªº³]©w¡A\n©Ò¥H§Ú­Ì¤]¤£­t³d¥ô¦ó«áªG¡C\n¦pªG§A¨Ï¥Î³o¼Ëªº³]©wªº¸Ü, ¦³¨Ç LiteStep ªº¥\¯à¨Ò¦p Desktop ´N·|³QÃö±¼¡C\n\n¦ý¬O wharf, hotkeys, ÁÙ¦³ shortcuts ÁÙ¬O¥i¥H¨Ï¥Î¡C\n\n¦pªG§A¤U¦¸¤£·Q¬Ý¨ì³o­ÓÄµ§i°T®§,\n½Ð¦b§Aªº step.rc ÀÉ¥[¤J LSNoShellWarning ªº³]©w¡C Ä~Äò¡H\n"
     IDS_LITESTEP_TITLE_WARNING "Äµ§i¡C"
     IDS_LITESTEP_ERROR4     "µn°O LiteStep µøµ¡®Éµo¥Í¿ù»~¡C\n"
@@ -38,15 +38,15 @@ BEGIN
     IDS_LITESTEP_ERROR6     "­«·s¸ü¤J LiteStep ªº°Ê§@¤w¸g¼È°±¤F¡A½Ð«ö [½T©w] Ä~Äò¡C"
     IDS_LITESTEP_ERROR7     "µLªk¸ü¤J %s¡C"
     IDS_LITESTEP_TITLE_FATAL_ERROR "ÄY­«¿ù»~¡C"
-END
-
-STRINGTABLE DISCARDABLE 
-BEGIN
     IDS_LITESTEP_RECYCLELS  "­«·s¸ü¤J(&R)"
     IDS_LITESTEP_QUITLS     "µ²§ô LiteStep (&Q)"
     IDS_LITESTEP_TERMINATELS "¼É¤O²×µ² LiteStep (&T)"
     IDS_LITESTEP_RUN        "°õ¦æ(&R)"
     IDS_LITESTEP_SHUTDOWNWIN "Ãö³¬µøµ¡(&S)"
+END
+
+STRINGTABLE DISCARDABLE 
+BEGIN
     IDS_LITESTEP_UNINSTALLLS "²¾°£ LiteStep (&U)"
 END
 
@@ -71,7 +71,7 @@ LANGUAGE LANG_GERMAN, SUBLANG_GERMAN
 STRINGTABLE DISCARDABLE 
 BEGIN
     IDS_LITESTEP_ERROR1     "Eine vorherige Instanz von Litestep gefunden.\nSind Sie sicher daß Sie weitermachen wollen ?"
-    IDS_LITESTEP_ERROR2     "Konnte die Datei \\""%s\\"" nicht finden.\nBitte stellen Sie sicher daß sich die Datei dort befindet."
+    IDS_LITESTEP_ERROR2     "Konnte die Datei ""%s"" nicht finden.\nBitte stellen Sie sicher, daß der Pfad korrekt ist und die Datei existiert."
     IDS_LITESTEP_ERROR3     "Es läuftt gerade eine andere Benutzeroberfläche. Auch wenn Litesten b24\nes ihnen erlaubt parallel zum Windows Explorer zu laufen, empfehlen wir es nicht für unerfahrenen Benutzer\n und werden es nicht unterstützen. Sie tun es also auf eigene Gefahr\n\nWenn Sie fortfahren, werden einige der fortgeschrittenen Funktionen von Litestep,\nwie z.B. der Desktopm abgeschaltet. Das Dock, Tastenkombinationen, und Verknüpfungen werden funktionieren.\n\nUm diese Warnung für das nächste Mal abzuschalten, ergänzen Sie LSNoShellWarning in ihre step.rc .\n\nWeitermachen?"
     IDS_LITESTEP_TITLE_WARNING "Warnung"
     IDS_LITESTEP_ERROR4     "Fehler beim registrieren der Litestep Hauptfensterklasse."
@@ -80,15 +80,15 @@ BEGIN
     IDS_LITESTEP_ERROR6     "Recycle wurde pausiert. Drücken Sie OK um weiterzumachen."
     IDS_LITESTEP_ERROR7     "Konnte %s nicht laden."
     IDS_LITESTEP_TITLE_FATAL_ERROR "Fataler Fehler."
-END
-
-STRINGTABLE DISCARDABLE 
-BEGIN
     IDS_LITESTEP_RECYCLELS  "Litestep &recyclen"
     IDS_LITESTEP_QUITLS     "Litestep Be&enden"
     IDS_LITESTEP_TERMINATELS "Litestep ab&brechen\n"
     IDS_LITESTEP_RUN        "&Starte..."
     IDS_LITESTEP_SHUTDOWNWIN "Windows &Herunterfahren"
+END
+
+STRINGTABLE DISCARDABLE 
+BEGIN
     IDS_LITESTEP_UNINSTALLLS "Litestep &Deinstallieren"
 END
 
@@ -175,8 +175,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 0,2,4,6
- PRODUCTVERSION 0,2,4,6
+ FILEVERSION 0,2,4,7
+ PRODUCTVERSION 0,2,4,7
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x21L
@@ -196,7 +196,7 @@ BEGIN
             VALUE "FileDescription", "LiteStep alternate shell for Microsoft Windows Operating Systems\0"
             VALUE "FileVersion", "0, 2, 4, 7\0"
             VALUE "InternalName", "LiteStep\0"
-            VALUE "LegalCopyright", "Copyright © 1997 - 2001\0"
+            VALUE "LegalCopyright", "Copyright © 1997 - 2002\0"
             VALUE "LegalTrademarks", "\0"
             VALUE "OriginalFilename", "litestep.exe\0"
             VALUE "PrivateBuild", "\0"
@@ -246,7 +246,7 @@ END
 STRINGTABLE DISCARDABLE 
 BEGIN
     IDS_LITESTEP_ERROR1     "A previous instance of LiteStep was detected.\nAre you sure you want to continue?"
-    IDS_LITESTEP_ERROR2     "Unable to find the file \\""%s\\"".\nPlease verify the location of the file, and try again"
+    IDS_LITESTEP_ERROR2     "Unable to find the file ""%s"".\nPlease verify the location of the file."
     IDS_LITESTEP_ERROR3     "You are currently running another shell, while Litestep b24 allows you\nto run under Explorer, we don't advise it for inexperienced users, and we\nwill not support it, so do so at your own risk.\n\nIf you continue, some of the advanced features of Litestep will be disabled\nsuch as the desktop. The wharf, hotkeys, and shortcuts will still work.\n\nTo get rid of this message next time, put LSNoShellWarning in your step.rc\n\nContinue?"
     IDS_LITESTEP_TITLE_WARNING "Warning"
     IDS_LITESTEP_ERROR4     "Error registering main Litestep window class."
@@ -255,15 +255,15 @@ BEGIN
     IDS_LITESTEP_ERROR6     "Recycle has been paused, click OK to continue."
     IDS_LITESTEP_ERROR7     "Unable to load %s."
     IDS_LITESTEP_TITLE_FATAL_ERROR "Fatal Error"
-END
-
-STRINGTABLE DISCARDABLE 
-BEGIN
     IDS_LITESTEP_RECYCLELS  "&Recycle LiteStep"
     IDS_LITESTEP_QUITLS     "&Quit LiteStep"
     IDS_LITESTEP_TERMINATELS "Forcibly &Terminate LiteStep"
     IDS_LITESTEP_RUN        "R&un..."
     IDS_LITESTEP_SHUTDOWNWIN "&Shutdown Windows..."
+END
+
+STRINGTABLE DISCARDABLE 
+BEGIN
     IDS_LITESTEP_UNINSTALLLS "U&ninstall LiteStep"
     IDS_MODULEQUIT_ERROR    "Exception while quitting module."
     IDS_MODULENOTFOUND_ERROR 
@@ -275,10 +275,6 @@ BEGIN
     IDS_MODULEINITEXCEPTION_ERROR 
                             "Error: Exception during module initialization.\n\nPlease contact the module writer."
     IDS_LITESTEP_CREATEWINDOW_ERROR "Unable to create window."
-END
-
-STRINGTABLE DISCARDABLE 
-BEGIN
     IDS_HOOKMGR_CREATETHREAD_ERROR "Could not create Hook Manager Thread"
     IDS_HOOKMGR_LOADHOOK_ERROR "Could not load hook.dll"
 END
@@ -304,7 +300,7 @@ LANGUAGE LANG_FRENCH, SUBLANG_FRENCH
 STRINGTABLE DISCARDABLE 
 BEGIN
     IDS_LITESTEP_ERROR1     "Une instance de LiteStep existe déjà.\nVoulez-vous vraiment continuer?"
-    IDS_LITESTEP_ERROR2     "Impossible de trouver le fichier \\""%s\\"".\nVeuillez vérifier\nl'emplacement du fichier et réessayer."
+    IDS_LITESTEP_ERROR2     "Impossible de trouver le fichier ""%s"".\nVeuillez vérifier\nl'emplacement du fichier."
     IDS_LITESTEP_ERROR3     "Vous exécutez actuellement un autre shell. Bien que Litestep b24 puisse fonctionner\nsous Explorer, ceci n'est pas conseillé aux utilisateurs inexpérimentés, et n'est \npas supporté, c'est donc à vos risques et périls.\n\nSi vous continuez, certaines des fonctionnalités avancées de Litestep seront désactivées,\nle bureau par exemple. Les Wharf, Hotkeys et les raccourcis fonctioneront toujours.\n\nPour vous\ndébarasser de ce message, ajoutez LSNoShellWarning à votre step.rc\n\nContinuer?  "
     IDS_LITESTEP_TITLE_WARNING "Avertissement"
     IDS_LITESTEP_ERROR4     "Erreur d'enregistrement de la window class principale de Litestep."
@@ -313,15 +309,15 @@ BEGIN
     IDS_LITESTEP_ERROR6     "Recycler est en pause, cliquez OK pour poursuivre."
     IDS_LITESTEP_ERROR7     "%s n'a pu être chargé(e)."
     IDS_LITESTEP_TITLE_FATAL_ERROR "Erreur fatale"
-END
-
-STRINGTABLE DISCARDABLE 
-BEGIN
     IDS_LITESTEP_RECYCLELS  "&Recycler LiteStep"
     IDS_LITESTEP_QUITLS     "&Quitter LiteStep"
     IDS_LITESTEP_TERMINATELS "&Forcer l'arrêt de LiteStep"
     IDS_LITESTEP_RUN        "&Exécuter..."
     IDS_LITESTEP_SHUTDOWNWIN "&Fermeture de Windows..."
+END
+
+STRINGTABLE DISCARDABLE 
+BEGIN
     IDS_LITESTEP_UNINSTALLLS "&Désinstaller LiteStep"
 END
 
@@ -346,7 +342,7 @@ LANGUAGE LANG_DUTCH, SUBLANG_DUTCH
 STRINGTABLE DISCARDABLE 
 BEGIN
     IDS_LITESTEP_ERROR1     "Er is een andere instantie van LiteStep gedetecteerd.\nWeet u zeker dat u door wilt gaan?"
-    IDS_LITESTEP_ERROR2     "Het bestand \\""%s\\"".\nVerifieer de locatie van het bestand en probeer opnieuw."
+    IDS_LITESTEP_ERROR2     "Het bestand ""%s"".\nVerifieer de locatie van het bestand en probeer opnieuw."
     IDS_LITESTEP_ERROR3     "You are currently running another shell, while Litestep b24 allows you\nto run under Explorer, we don't advise it for inexperienced users, and we\nwill not support it, so do so at your own risk.\n\nIf you continue, some of the advanced features of Litestep will be disabled\nsuch as the desktop. The wharf, hotkeys, and shortcuts will still work.\n\nTo get rid of this message next time, put LSNoShellWarning in your step.rc\n\nContinue?"
     IDS_LITESTEP_TITLE_WARNING "Waarschuwing."
     IDS_LITESTEP_ERROR4     "Fout bij het registreren van de main LiteStep Window Class."
@@ -355,15 +351,15 @@ BEGIN
     IDS_LITESTEP_ERROR6     "Recycle is gepauzeerd, klik op OK om door te gaan."
     IDS_LITESTEP_ERROR7     "Unable to load %s."
     IDS_LITESTEP_TITLE_FATAL_ERROR "Fatal Error"
-END
-
-STRINGTABLE DISCARDABLE 
-BEGIN
     IDS_LITESTEP_RECYCLELS  "&Hernieuw LiteStep"
     IDS_LITESTEP_QUITLS     "&Stop LiteStep"
     IDS_LITESTEP_TERMINATELS "Forcibly &Terminate LiteStep"
     IDS_LITESTEP_RUN        "&Run..."
     IDS_LITESTEP_SHUTDOWNWIN "&Afsluiten Windows..."
+END
+
+STRINGTABLE DISCARDABLE 
+BEGIN
     IDS_LITESTEP_UNINSTALLLS "&De-installeren LiteStep"
 END
 
@@ -388,7 +384,7 @@ LANGUAGE LANG_SWEDISH, SUBLANG_DEFAULT
 STRINGTABLE DISCARDABLE 
 BEGIN
     IDS_LITESTEP_ERROR1     "En tidigare instans av LiteStep upptäcktes.\nÄr du säker på att du vill fortsätta?"
-    IDS_LITESTEP_ERROR2     "Kunde inte hitta filen \\""%s\\"".\nKontrollera att filen existerar och försök igen."
+    IDS_LITESTEP_ERROR2     "Kunde inte hitta filen ""%s"".\nKontrollera att filen existerar och försök igen."
     IDS_LITESTEP_ERROR3     "LiteStep har upptäckt att du kör ett annat skal.\n\nÄven om LiteStep kan köras under Explorer, så\nrekommenderar vi inte ovana användare att försöka, och erbjuder\ningen hjälp om problem skulle uppstå.\n\nOm du fortsätter kommer många av LiteSteps funktioner att vara otillgängliga.\n\nFör att stänga av den här varningen kan du sätta LSNoShellWarning till true i din step.rc fil.\n\nVill du verkligen fortsätta?"
     IDS_LITESTEP_TITLE_WARNING "Varning"
     IDS_LITESTEP_ERROR4     "Ett fel uppstod när klassen för huvudfönstret skulle registreras.Error registering main Litestep window class."
@@ -397,15 +393,15 @@ BEGIN
     IDS_LITESTEP_ERROR6     "Återvinning av inställningarna har pausats. Tryck på OK för att fortsätta."
     IDS_LITESTEP_ERROR7     "Kunde inte ladda %s."
     IDS_LITESTEP_TITLE_FATAL_ERROR "Oåterkalleligt fel"
-END
-
-STRINGTABLE DISCARDABLE 
-BEGIN
     IDS_LITESTEP_RECYCLELS  "&Återvinn inställningar"
     IDS_LITESTEP_QUITLS     "&Avsluta"
     IDS_LITESTEP_TERMINATELS "Avsluta med &våld."
     IDS_LITESTEP_RUN        "&Kör..."
     IDS_LITESTEP_SHUTDOWNWIN "&Stäng av..."
+END
+
+STRINGTABLE DISCARDABLE 
+BEGIN
     IDS_LITESTEP_UNINSTALLLS "A&vinstallera LiteStep"
 END
 
@@ -430,7 +426,7 @@ LANGUAGE LANG_SPANISH, SUBLANG_SPANISH_MEXICAN
 STRINGTABLE DISCARDABLE 
 BEGIN
     IDS_LITESTEP_ERROR1     "Fue detectada una instancia previa de LiteStep.\n¿Estas seguro de querer continuar?"
-    IDS_LITESTEP_ERROR2     "No se pudo encontrar el archivo \\""%s\\"".\nPor favor verifique donde se encuentra el archivo, e intente de nuevo."
+    IDS_LITESTEP_ERROR2     "No se pudo encontrar el archivo ""%s"".\nPor favor verifique donde se encuentra el archivo, e intente de nuevo."
     IDS_LITESTEP_ERROR3     "Actualmente estas corriendo otra shell, mientras que Litestep b24 te\npermite\n\ncorrer bajo Explorer, no lo recomendamos para usuarios sin experiencia, y\nnosotros\nno ofreceremos soporte, asi que usalo a tu propio riesgo.\n\nSi\ncontinuas,\nalgunas de las caracteristicas avanzadas de LiteStep seran\ndesactivadas,\ncomo es el caso de el escritorio. La wharf, hotkeys, y shortcuts funcionaran.\n\nPara que este mensaje no aparezca la proxima vez, coloca LSNoShellWarning en tu step.rc\n\n¿Continuar?"
     IDS_LITESTEP_TITLE_WARNING "Advertencia"
     IDS_LITESTEP_ERROR4     "Error registrando la clase principal de la ventana de LiteStep."
@@ -439,15 +435,15 @@ BEGIN
     IDS_LITESTEP_ERROR6     "El Reciclaje ha sido pausado, haz click en OK para continuar."
     IDS_LITESTEP_ERROR7     "No se pudo cargar %s."
     IDS_LITESTEP_TITLE_FATAL_ERROR "Error Fatal"
-END
-
-STRINGTABLE DISCARDABLE 
-BEGIN
     IDS_LITESTEP_RECYCLELS  "&Reciclar LiteStep"
     IDS_LITESTEP_QUITLS     "&Quitar LiteStep"
     IDS_LITESTEP_TERMINATELS "&Terminar LiteStep a la fuerza"
     IDS_LITESTEP_RUN        "&Ejecutar..."
     IDS_LITESTEP_SHUTDOWNWIN "&Apagar Windows..."
+END
+
+STRINGTABLE DISCARDABLE 
+BEGIN
     IDS_LITESTEP_UNINSTALLLS "&Desinstalar LiteStep"
 END
 
