--- a/litestep/litestep.rc
+++ b/litestep/litestep.rc
@@ -72,7 +72,7 @@ STRINGTABLE DISCARDABLE
 BEGIN
     IDS_LITESTEP_ERROR1     "Eine vorherige Instanz von Litestep gefunden.\nSind Sie sicher daß Sie weitermachen wollen?"
     IDS_LITESTEP_ERROR2     "Konnte die Datei ""%s"" nicht finden.\nBitte stellen Sie sicher, daß der Pfad korrekt ist und die Datei existiert."
-    IDS_LITESTEP_ERROR3     "Es läuftt gerade eine andere Benutzeroberfläche. Auch wenn Litesten b24\nes ihnen erlaubt, parallel zum Windows Explorer zu laufen, empfehlen wir es nicht für unerfahrene Benutzer\n und werden es nicht unterstützen. Sie tun es also auf eigene Gefahr.\n\nWenn Sie fortfahren, werden einige der fortgeschrittenen Funktionen von Litestep,\nwie z.B. der Desktop abgeschaltet. Das Dock, Tastenkombinationen, und Verknüpfungen werden funktionieren.\n\nUm diese Warnung für das nächste Mal abzuschalten, ergänzen Sie Ihre step.rc um die Zeile ""LSNoShellWarning"".\n\nWeitermachen?"
+    IDS_LITESTEP_ERROR3     "Es läuft gerade eine andere Benutzeroberfläche. Auch wenn Litestep b24\nes ihnen erlaubt, parallel zum Windows Explorer zu laufen, empfehlen wir es nicht für unerfahrene Benutzer\n und werden es nicht unterstützen. Sie tun es also auf eigene Gefahr.\n\nWenn Sie fortfahren, werden einige der fortgeschrittenen Funktionen von Litestep,\nwie z.B. der Desktop abgeschaltet. Das Dock, Tastenkombinationen, und Verknüpfungen werden funktionieren.\n\nUm diese Warnung für das nächste Mal abzuschalten, ergänzen Sie Ihre step.rc um die Zeile ""LSNoShellWarning"".\n\nWeitermachen?"
     IDS_LITESTEP_TITLE_WARNING "Warnung"
     IDS_LITESTEP_ERROR4     "Fehler beim registrieren der Litestep Hauptfensterklasse."
     IDS_LITESTEP_TITLE_ERROR "Fehler"
