Missing BangManager.h added to project

--- a/lsapi/lsapi_vc71.vcproj
+++ b/lsapi/lsapi_vc71.vcproj
@@ -200,6 +200,9 @@
 				RelativePath=".\BangCommand.h">
 			</File>
 			<File
+				RelativePath="..\litestep\BangManager.h">
+			</File>
+			<File
 				RelativePath=".\bangs.h">
 			</File>
 			<File
