Adjusted output directories

--- a/hook/hook_vc71.vcproj
+++ b/hook/hook_vc71.vcproj
@@ -4,6 +4,7 @@
 	Version="7.10"
 	Name="hook"
 	ProjectGUID="{7C06591C-6BFA-490F-9443-9EB877A6738A}"
+	RootNamespace="hook"
 	Keyword="Win32Proj">
 	<Platforms>
 		<Platform
@@ -31,7 +32,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="$(OutDir)/hook.dll"
+				OutputFile="../litestep/Debug/hook.dll"
 				LinkIncremental="2"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(OutDir)/hook.pdb"
@@ -65,7 +66,7 @@
 			IntermediateDirectory="Release"
 			ConfigurationType="2"
 			CharacterSet="2"
-			WholeProgramOptimization="FALSE">
+			WholeProgramOptimization="TRUE">
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="2"
@@ -85,14 +86,14 @@
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				WarnAsError="TRUE"
-				Detect64BitPortabilityProblems="TRUE"
+				Detect64BitPortabilityProblems="FALSE"
 				DebugInformationFormat="0"
 				CompileAs="0"/>
 			<Tool
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="$(OutDir)/hook.dll"
+				OutputFile="../litestep/Release/hook.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
 				GenerateDebugInformation="FALSE"
