--- a/utility/utility_vc71.vcproj
+++ b/utility/utility_vc71.vcproj
@@ -57,7 +57,7 @@
 			IntermediateDirectory="Release"
 			ConfigurationType="4"
 			CharacterSet="2"
-			WholeProgramOptimization="FALSE">
+			WholeProgramOptimization="TRUE">
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="2"
@@ -77,7 +77,7 @@
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				WarnAsError="FALSE"
-				Detect64BitPortabilityProblems="TRUE"
+				Detect64BitPortabilityProblems="FALSE"
 				DebugInformationFormat="0"
 				CompileAs="0"/>
 			<Tool
