Wrapped internal exports and definitions in #ifdef LSAPI_PRIVATE (VC 7.1 project files only!) Added version resource to lsapi Updated copyright notice in version resource to year 2005 Replaced german comments strings

--- a/hook/hook_vc71.vcproj
+++ b/hook/hook_vc71.vcproj
@@ -88,11 +88,12 @@
 				TreatWChar_tAsBuiltInType="TRUE"
 				ForceConformanceInForLoopScope="TRUE"
 				UsePrecompiledHeader="0"
-				WarningLevel="3"
+				WarningLevel="4"
 				WarnAsError="FALSE"
 				Detect64BitPortabilityProblems="FALSE"
 				DebugInformationFormat="0"
-				CompileAs="0"/>
+				CompileAs="0"
+				DisableSpecificWarnings="4702"/>
 			<Tool
 				Name="VCCustomBuildTool"/>
 			<Tool
