--- a/litestep/litestep.rc
+++ b/litestep/litestep.rc
@@ -117,6 +117,8 @@ BEGIN
     CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDHORZ,0,32,241,1
     CONTROL         "",IDC_THEME_INFO,"Static",SS_LEFTNOWORDWRAP | WS_GROUP,
                     16,18,182,8
+    EDITTEXT        IDC_EDIT,10,58,219,100,ES_MULTILINE | ES_READONLY | NOT 
+                    WS_VISIBLE | WS_VSCROLL
 END
 
 
