VS 7.1 project files brought up to date

--- a/litestep/litestep_vc71.vcproj
+++ b/litestep/litestep_vc71.vcproj
@@ -178,6 +178,9 @@
 				RelativePath=".\StartupRunner.cpp">
 			</File>
 			<File
+				RelativePath=".\TrayNotifyIcon.cpp">
+			</File>
+			<File
 				RelativePath=".\TrayService.cpp">
 			</File>
 		</Filter>
@@ -220,6 +223,12 @@
 			</File>
 			<File
 				RelativePath=".\StartupRunner.h">
+			</File>
+			<File
+				RelativePath=".\TrayAppBar.h">
+			</File>
+			<File
+				RelativePath=".\TrayNotifyIcon.h">
 			</File>
 			<File
 				RelativePath=".\TrayService.h">
