Manually merging changes from branch 0-24-x: - LSAPIInit reorganization - Removed 'nopump' flag - Fixed module threading (incl. crash bug)

--- a/lsapi/lsapi_vc71.vcproj
+++ b/lsapi/lsapi_vc71.vcproj
@@ -159,6 +159,9 @@
 				RelativePath=".\lsapi.cpp">
 			</File>
 			<File
+				RelativePath=".\lsapiInit.cpp">
+			</File>
+			<File
 				RelativePath=".\lsmultimon.cpp">
 			</File>
 			<File
@@ -216,6 +219,9 @@
 			</File>
 			<File
 				RelativePath=".\lsapidefines.h">
+			</File>
+			<File
+				RelativePath=".\lsapiInit.h">
 			</File>
 			<File
 				RelativePath=".\lsmultimon.h">
