Manually merging changes from branch 0-24-x: - VS 7.1 project files updated

--- a/litestep/litestep_vc71.vcproj
+++ b/litestep/litestep_vc71.vcproj
@@ -174,6 +174,9 @@
 				RelativePath=".\StartupRunner.cpp">
 			</File>
 			<File
+				RelativePath=".\TrayNotifyIcon.cpp">
+			</File>
+			<File
 				RelativePath=".\TrayService.cpp">
 			</File>
 		</Filter>
@@ -213,6 +216,9 @@
 			</File>
 			<File
 				RelativePath=".\StartupRunner.h">
+			</File>
+			<File
+				RelativePath=".\TrayNotifyIcon.h">
 			</File>
 			<File
 				RelativePath=".\TrayService.h">
