Manually merging changes from branch 0-24-x: - Added AppBar support

--- a/litestep/litestep_vc71.vcproj
+++ b/litestep/litestep_vc71.vcproj
@@ -218,6 +218,9 @@
 				RelativePath=".\StartupRunner.h">
 			</File>
 			<File
+				RelativePath=".\TrayAppBar.h">
+			</File>
+			<File
 				RelativePath=".\TrayNotifyIcon.h">
 			</File>
 			<File
