* Rewrote process startup logic (most of WinMain); moved into its own file. * Skip startup items in safe mode or launch Explorer * Added command line flag -explorer to start Explorer as shell if possible * Fixed passing of alternate config file on command line

--- a/litestep/litestep_vc71.vcproj
+++ b/litestep/litestep_vc71.vcproj
@@ -179,6 +179,9 @@
 			<File
 				RelativePath=".\TrayService.cpp">
 			</File>
+			<File
+				RelativePath=".\WinMain.cpp">
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
